include/tvm/ffi/c_api.h

enum TVMFFITypeIndex : int32_t {
#else
typedef enum {
#endif
  kTVMFFIAny = -1,
  kTVMFFINone = 0,
  kTVMFFIInt = 1,
  kTVMFFIBool = 2,
  kTVMFFIFloat = 3,
  kTVMFFIOpaquePtr = 4,
  kTVMFFIDataType = 5,
  kTVMFFIDevice = 6,
  kTVMFFIDLTensorPtr = 7,
  kTVMFFIRawStr = 8,
  kTVMFFIByteArrayPtr = 9,
  kTVMFFIObjectRValueRef = 10,
  kTVMFFISmallStr = 11,
  kTVMFFISmallBytes = 12,
  kTVMFFIUnchanged = 13,
  kTVMFFIStaticObjectBegin = 64,
  kTVMFFIObject = 64,
  kTVMFFIStr = 65,
  kTVMFFIBytes = 66,
  kTVMFFIError = 67,
  kTVMFFIFunction = 68,
  kTVMFFIShape = 69,
  kTVMFFITensor = 70,
  kTVMFFIArray = 71,
  kTVMFFIMap = 72,
  kTVMFFIModule = 73,
  kTVMFFIOpaquePyObject = 74,
  kTVMFFIList = 75,
  kTVMFFIDict = 76,
  kTVMFFIVisitInterrupt = 77,
  kTVMFFIBigInt = 78,
  kTVMFFIStaticObjectEnd,
  kTVMFFIDynObjectBegin = 128
#ifdef __cplusplus
};
#else
} TVMFFITypeIndex;
typedef void* TVMFFIObjectHandle;
enum TVMFFIObjectDeleterFlagBitMask : int32_t {
#else
typedef enum {
#endif
  kTVMFFIObjectDeleterFlagBitMaskStrong = 1 << 0,
  kTVMFFIObjectDeleterFlagBitMaskWeak = 1 << 1,
  kTVMFFIObjectDeleterFlagBitMaskBoth =
      (kTVMFFIObjectDeleterFlagBitMaskStrong | kTVMFFIObjectDeleterFlagBitMaskWeak),
#ifdef __cplusplus
};
#else
} TVMFFIObjectDeleterFlagBitMask;
typedef struct {
  uint64_t combined_ref_count;
  int32_t type_index;
  uint32_t __padding;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {
#endif
    void (*deleter)(void* self, int flags);
    int64_t __ensure_align;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
} TVMFFIObject;
typedef struct {
  int32_t type_index;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {  
#endif
    uint32_t zero_padding;
    uint32_t small_str_len;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {  
#endif
    int64_t v_int64;
    double v_float64;
    void* v_ptr;
    const char* v_c_str;
    TVMFFIObject* v_obj;
    DLDataType v_dtype;
    DLDevice v_device;
    char v_bytes[8];
    uint64_t v_uint64;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
} TVMFFIAny;
typedef struct {
  const char* data;
  size_t size;
} TVMFFIByteArray;
typedef struct {
  const int64_t* data;
  size_t size;
} TVMFFIShapeCell;
enum TVMFFIBacktraceUpdateMode : int32_t {
#else
typedef enum {
#endif
  kTVMFFIBacktraceUpdateModeReplace = 0,
  kTVMFFIBacktraceUpdateModeAppend = 1,
#ifdef __cplusplus
};
#else
} TVMFFIBacktraceUpdateMode;
typedef struct {
  TVMFFIByteArray kind;
  TVMFFIByteArray message;
  TVMFFIByteArray backtrace;
  void (*update_backtrace)(TVMFFIObjectHandle self, const TVMFFIByteArray* backtrace,
                           int32_t update_mode);
  TVMFFIObjectHandle cause_chain;
  TVMFFIObjectHandle extra_context;
} TVMFFIErrorCell;
typedef int (*TVMFFISafeCallType)(void* handle, const TVMFFIAny* args, int32_t num_args,
                                  TVMFFIAny* result);
typedef struct {
  TVMFFISafeCallType safe_call;
  void* cpp_call;
} TVMFFIFunctionCell;
TVM_FFI_DLL int TVMFFIObjectCreateOpaque(void* handle, int32_t type_index,
                                         void (*deleter)(void* handle), TVMFFIObjectHandle* out);
TVM_FFI_DLL int TVMFFIFunctionCreate(void* self, TVMFFISafeCallType safe_call,
                                     void (*deleter)(void* self), TVMFFIObjectHandle* out);
typedef int (*TVMFFIFieldGetter)(void* field, TVMFFIAny* result);
typedef int (*TVMFFIFieldSetter)(void* field, const TVMFFIAny* value);
typedef int (*TVMFFIObjectCreator)(TVMFFIObjectHandle* result);
enum TVMFFIFieldFlagBitMask : int32_t {
#else
typedef enum {
#endif
  kTVMFFIFieldFlagBitMaskWritable = 1 << 0,
  kTVMFFIFieldFlagBitMaskHasDefault = 1 << 1,
  kTVMFFIFieldFlagBitMaskIsStaticMethod = 1 << 2,
  kTVMFFIFieldFlagBitMaskSEqHashIgnore = 1 << 3,
  kTVMFFIFieldFlagBitMaskSEqHashDefPattern = 1 << 4,
  kTVMFFIFieldFlagBitMaskDefaultFromFactory = 1 << 5,
  kTVMFFIFieldFlagBitMaskReprOff = 1 << 6,
  kTVMFFIFieldFlagBitMaskCompareOff = 1 << 7,
  kTVMFFIFieldFlagBitMaskHashOff = 1 << 8,
  kTVMFFIFieldFlagBitMaskInitOff = 1 << 9,
  kTVMFFIFieldFlagBitMaskKwOnly = 1 << 10,
  kTVMFFIFieldFlagBitSetterIsFunctionObj = 1 << 11,
  kTVMFFIFieldFlagBitMaskSEqHashDefSimple = 1 << 12,
#ifdef __cplusplus
};
#else
} TVMFFIFieldFlagBitMask;
enum TVMFFISEqHashKind : int32_t {
#else
typedef enum {
#endif
  kTVMFFISEqHashKindUnsupported = 0,
  kTVMFFISEqHashKindTreeNode = 1,
  kTVMFFISEqHashKindFreeVar = 2,
  kTVMFFISEqHashKindDAGNode = 3,
  kTVMFFISEqHashKindConstTreeNode = 4,
  kTVMFFISEqHashKindUniqueInstance = 5,
#ifdef __cplusplus
};
#else
} TVMFFISEqHashKind;
typedef struct {
  TVMFFIByteArray name;
  TVMFFIByteArray doc;
  TVMFFIByteArray metadata;
  int64_t flags;
  int64_t size;
  int64_t alignment;
  int64_t offset;
  TVMFFIFieldGetter getter;
  void* setter;
  TVMFFIAny default_value_or_factory;
  int32_t field_static_type_index;
} TVMFFIFieldInfo;
typedef struct {
  TVMFFIByteArray name;
  TVMFFIByteArray doc;
  TVMFFIByteArray metadata;
  int64_t flags;
  TVMFFIAny method;
} TVMFFIMethodInfo;
typedef struct {
  TVMFFIByteArray doc;
  TVMFFIObjectCreator creator;
  int32_t total_size;
  TVMFFISEqHashKind structural_eq_hash_kind;
} TVMFFITypeMetadata;
typedef struct {
  const TVMFFIAny* data;
  int32_t size;
  int32_t begin_index;
} TVMFFITypeAttrColumn;
struct TVMFFITypeInfo {
#else
typedef struct TVMFFITypeInfo {
#endif
  int32_t type_index;
  int32_t type_depth;
  TVMFFIByteArray type_key;
  const struct TVMFFITypeInfo** type_ancestors;
  uint64_t type_key_hash;
  int32_t num_fields;
  int32_t num_methods;
  const TVMFFIFieldInfo* fields;
  const TVMFFIMethodInfo* methods;
  const TVMFFITypeMetadata* metadata;
#ifdef __cplusplus
};
#else
} TVMFFITypeInfo;
TVM_FFI_DLL int TVMFFIHandleInitOnce(void** handle_addr, int (*init_func)(void** result));
TVM_FFI_DLL int TVMFFIHandleDeinitOnce(void** handle_addr, int (*deinit_func)(void* handle));